layout/styles/layout.scss
html,
body {
    padding: 0;
    margin: 0;

    font-size: 16px; /* 1rem = 16px */
    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;

    font-synthesis: none;
    text-rendering: optimizeLegibility;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;

    text-rendering: optimizeLegibility;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
    -webkit-text-size-adjust: 110%;
}

body {
    height: 100%; /* full screen */
}

.root {
    max-width: 35rem;
    margin: 0 auto;
    background-color: seagreen;
    // padding: 0rem 2rem 0 2rem; /* trbl */
}

